Finally done with signup API

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 8000
 NODE_ENV = development
 MONGO_PASSWORD = @n6JYkY.YxbdgUx
 MONGO_STRING = mongodb+srv://Ashar:<PASSWORD>@cluster0.rnf7n.mongodb.net/sketchlada?retryWrites=true&w=majority
+JWT_WEB_SECRET = sketchlada_our_security
+JWT_EXPIRES_IN = 90d
