Forgot pass, reset token & mail P-01

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ MONGO_PASSWORD = @n6JYkY.YxbdgUx
 MONGO_STRING = mongodb+srv://Ashar:<PASSWORD>@cluster0.rnf7n.mongodb.net/sketchlada?retryWrites=true&w=majority
 JWT_WEB_SECRET = sketchlada_our_security
 JWT_EXPIRES_IN = 90d
+EMAIL_SERVICE_HOST = smtp.mailtrap.io
+EMAIL_SERVICE_PORT = 2525
+EMAIL_SERVICE_USER = 5dd6de7df702a9
+EMAIL_SERVICE_PASSWORD = 8f680bcff69f45
