done with security and auth apis

--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
+NODE_ENV = development
 PORT = 8000
 NODE_ENV = development
 MONGO_PASSWORD = @n6JYkY.YxbdgUx
 MONGO_STRING = mongodb+srv://Ashar:<PASSWORD>@cluster0.rnf7n.mongodb.net/sketchlada?retryWrites=true&w=majority
 JWT_WEB_SECRET = sketchlada_our_security
 JWT_EXPIRES_IN = 90d
+COOKIE_EXPIRES_IN = 90
 EMAIL_SERVICE_HOST = smtp.mailtrap.io
 EMAIL_SERVICE_PORT = 2525
 EMAIL_SERVICE_USER = 5dd6de7df702a9
