--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ EMAIL_SERVICE_HOST = smtp.mailtrap.io
 EMAIL_SERVICE_PORT = 2525
 EMAIL_SERVICE_USER = 5dd6de7df702a9
 EMAIL_SERVICE_PASSWORD = 8f680bcff69f45
-AWS_ACCESS_KEY = AKIATSSASJCQNTEM3PWI
-AWS_SECRET_KEY = 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
+AWS_ACCESS_KEY = cannot expose it sorry
+AWS_SECRET_KEY = cannot expose it sorry
 AWS_S3_BUCKET = sketchlada
