--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "aws-sdk": "^2.994.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
@@ -10,6 +11,7 @@
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.2",
+    "stripe": "^8.195.0",
     "uuid": "^8.3.2",
     "xss-clean": "^0.1.1"
   },
