--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV = development
 PORT = 8000
 NODE_ENV = development
-MONGO_PASSWORD = @n6JYkY.YxbdgUx
+MONGO_PASSWORD = B7nsiCCKSY3Fspgz
 MONGO_STRING = mongodb+srv://Ashar:<PASSWORD>@cluster0.rnf7n.mongodb.net/sketchlada?retryWrites=true&w=majority
 JWT_WEB_SECRET = sketchlada_our_security
 JWT_EXPIRES_IN = 90d
