--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV = development
 PORT = 8000
 NODE_ENV = development
 MONGO_PASSWORD = B7nsiCCKSY3Fspgz
-MONGO_STRING = mongodb://Ashar:<PASSWORD>@cluster0-shard-00-00.rnf7n.mongodb.net:27017,cluster0-shard-00-01.rnf7n.mongodb.net:27017,cluster0-shard-00-02.rnf7n.mongodb.net:27017/Sketchlada?ssl=true&replicaSet=atlas-hw2g4q-shard-0&authSource=admin&retryWrites=true&w=majority
+MONGO_STRING = mongodb://Ashar:<PASSWORD>@cluster0-shard-00-00.rnf7n.mongodb.net:27017,cluster0-shard-00-01.rnf7n.mongodb.net:27017,cluster0-shard-00-02.rnf7n.mongodb.net:27017/sketchlada?ssl=true&replicaSet=atlas-hw2g4q-shard-0&authSource=admin&retryWrites=true&w=majority
 JWT_WEB_SECRET = sketchlada_our_security
 JWT_EXPIRES_IN = 90d
 COOKIE_EXPIRES_IN = 90
